tests/typing/bad/testfile-if-3.c

union S { int a; };
int main() { union S s; if(s); }

